[project]
name = "platform-narratives"
version = "1.0.0"
description = "Cross-platform narrative frame analysis pipeline for 'Same Event, Different Truths' (ICWSM)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fast-langdetect>=0.3.2",
    "ipykernel>=6.29.5",
    "plotly>=6.1.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "networkx>=2.6.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
    "vllm>=0.6.0",
    "statsmodels>=0.14.4",
    "umap-learn>=0.5.7",
    "nbformat>=5.10.4",
    "json-repair>=0.47.6",
    "krippendorff>=0.8.1",
    "transformers>=4.56.1",
]
